fixed broken css and styling

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -51,9 +51,11 @@ li {
 	padding: 10px;
 	margin: 20px;
 	margin-top: 60px;
-	background-color:#fffaed;
+	background-color:#d4dbff;
 	border: 1px solid blue;
+	border-radius: 5px;
 	height: 700px;
+	box-shadow: inset 0 0 10px #777777;
 }
 #one{
 	height:700px;
@@ -61,7 +63,7 @@ li {
 	border-radius: 4px;
 	display: inline-block;
 	background-color: #879ac9;
-	box-shadow: inset 0 0 10px #777777;
+	box-shadow: inset 0 0 10px #000000;
 
 }
 
@@ -109,9 +111,12 @@ li {
 }
 #stripes{
 	width: 100%;
+	height: 150px;
 }
 #curves{
 	width: 98%;
+	margin-top: -20px;
+
 }
 
 #foot{
@@ -120,7 +125,7 @@ li {
 	border: 1px solid black;
 	position: relative;
 	bottom: -200px;
-	padding: 10px;
+	padding: 0px;
 	background-color: #879ac9;
 
 }
